src/_includes/css/app.css
:root {
  --grad1: #002239;
  --grad2: #0b605f;
  --grad3: #58ADAC;
  --stripe: #fff1;

  --bg-contrast: #000a;
  --bg-contrast-text: #ccc;
  --bg-contrast-title: #B6B58E;
  --bg-highlight: #202237;
  --bg-highlight-text: #666;

  --max-w: 960px;
  --icon-med: 24px;
  --icon-lg: 64px;
}

html,
body {
  margin: 0;
}

body {
  --grad-img: linear-gradient(119deg, var(--grad1) 2%, var(--grad2) 82%);

  scroll-behavior: smooth;
  font-family: system-ui;
  background: var(--grad1) var(--grad-img) no-repeat;
  color: #ccc;
}

.unlist {
  list-style: none;
  padding: 0;
  margin: 0;
}

.container {
  max-width: var(--max-w);
  margin: 0 auto;
  padding: 0 1rem;

  @media (--mq-l) {
    padding: 0;
  }
}

.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;

  @media (--mq-m) {
    flex-wrap: initial;
    justify-content: space-between;
  }
}

.hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  clip: rect(0 0 0 0); 
  clip-path: inset(100%);
  overflow: hidden;
  white-space: nowrap; 
}

.icons {
  display: none;
}

.copy {
  padding: 1rem;
}

.bg {
  background: var(--bg-contrast);
  color: var(--bg-contrast-text);

  & p a {
    color: var(--bg-contrast-title);
    text-decoration: underline;

    &:enter {
      text-decoration: none;
    }
  }
}

.icon {
  --wh: var(--icon-med);

  stroke: currentColor;
  width: var(--wh);
  height: var(--wh);

  &.icon--lg {
    --wh: var(--icon-lg);
  }
}

.register {
  --bg: #000a;
  --colour: var(--bg-contrast-title);

  transition: color 0.25s, background-color 0.25s;

  display: flex;
  justify-content: space-between;
  align-items: center;
  
  margin-top: 1em;
  padding: 0.5rem 1rem;
  border: 1px solid var(--bg-contrast-title);
  text-decoration: none;
  background: var(--bg);
  color: var(--colour);
  
  &:enter {
    --colour: #000a;
    --bg: var(--bg-contrast-title);
  }
}

.register__label {
  flex: 1 0 auto;
}

.register--inactive {
  color: #888;
} 

/* App
------------------------------------------------------------------------------*/
.app {
  position: relative;
  display: grid;
  grid-template-rows: auto 1fr auto auto;
  grid-gap: 1rem;
  grid-template-areas:
    "nav"
    "header"
    "content" 
    "sponsors"
    "footer";
  
  min-height: 100vh;

  &::before  {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: #000a;
    z-index: 1;
  }

  @nest .menu-closed &::before {
    content: none;
  }

  @media (--mq-m) {
    grid-template-areas:
      "nav    nav       nav     nav"
      ".      header    content ."
      ".      sponsors  content ."
      "footer footer    footer  footer";

    grid-template-columns: 1fr minmax(160px, 300px) minmax(460px, calc(660px - 1rem)) 1fr;
    grid-template-rows: auto auto 1fr auto;
    
    &::before {
      content: none;
    }
  }
}

.app__controls {
  background: #000;
  color: #999;
}

.app__nav {
  grid-area: nav;

  padding: 0.5rem 0;

  @media (--mq-m) {
    padding: 0;
  }
}

.app__title {  
  position: relative;
  margin: 0 auto;
  text-align: center;
  font-weight: 100;
  font-size: var(--h2);
  line-height: 2.5rem;
  white-space: nowrap;
  color: #fff;

  @media (--mq-m) {
    margin: 0 0 0 6px;
    text-align: initial;
    line-height: 2.2rem;
  }

  & a {
    position: relative;
  }

  &::before {
    content: "";

    position: absolute;
    transform: translateX(-50%);
    left: calc(50% - 12px);
    width: 154px;
    height: 100%;
    border: 1px solid var(--bg-contrast-title);
    border: 1px solid #fff6;

    @media (--mq-m) {
      inset: 0 -6px;
      transform: initial;
    }
  }
}

.app__links {
  will-change: transform;
  transition: transform 0.3s;
  transform: translateX(-100%);
    
  position: fixed;
  left: 100%;
  top: 0;
  z-index: 1;

  height: 100vh;
  border-left: 1px solid var(--bg-contrast-title);
  background: #000;
  color: #999;

  @nest .menu-closed & {
    transform: translateX(0);

    &::before {
      content: none;
    }
  }

  @media (--mq-m) {
    transform: none;

    position: static;
    left: initial;
    top: initial;

    display: flex;

    height: auto;
    padding: 0;
    border: none;

    &::before {
      content: none;
    }
  }
}

.app__links__togglebtn {
  position: absolute;
  top: 0;
  right: 100%;

  @media (--mq-m) {
    display: none;
  }
}

.togglebtn__body {
  --wh: 56px;

  display: grid;
  place-content: center;

  box-sizing: border-box;
  width: var(--wh);
  height: var(--wh);
  font-size: 0.7rem;
  text-align: center;
  background: var(--bg-contrast-title);

  color: #000;

  & svg {
    margin: auto;
  }

  @nest button:enter & {
    background: #fff;
  }
}

.app__link {
  flex: 1 0 auto;

  display: block;
  padding: 1rem;
  white-space: nowrap;

  &:enter,
  &:target,
  &.active {
    background: var(--bg-highlight);
    color: var(--bg-contrast-title);
  }

  @media (--mq-m) {
    padding: 0.75rem 1rem;
  }
}

.app__footer {
  grid-area: footer;

  position: relative;
  padding: 0.5rem;
  font-size: 0.8rem;
  z-index: -1;
}

/* Page
------------------------------------------------------------------------------*/
.page {
  @media (--mq-m) {
    display: flex;
    flex-direction: column;
    
    overflow: hidden;
    max-height: 100%;
  }
}

.page__title {
  padding: 0.25rem;
  border: 1px solid currentColor;
  border-left: none;
  border-right: none;
}

.page__content {
  grid-area: content;

  min-height: 100%;

  &.page__content--stretch {
    display: flex;
    flex-direction: column;
  }
}

.talks {
  display: grid;
  gap: 1rem;
  align-content: flex-start;
}

/* Content
------------------------------------------------------------------------------*/
.content__header {
  grid-area: header;

  display: grid;

  @media (--mq-m) {
    position: sticky;
    top: 1rem;
  }
}

.content__header__toc {
  font-size: 1.2rem;

  & ol {
    margin: 0;
    padding-left: 2rem;
    list-style-type: disc;
  }

  & > ol {
    list-style-type: lower-latin;
  }
  
  & a {
    text-decoration: initial;
    color: inherit;

    &:enter {
      text-decoration: underline;
      color: var(--bg-contrast-title);
    }
  }
}

.content__hero {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  height: 200px;
  padding: 2rem 1rem 1rem;
  background: var(--bg-highlight);

  @media (--mq-m) {
    padding: 0.5rem 1rem;
  }
}

.content__hero__caption {
  font-size: 2.5rem;
  font-weight: 600;
  line-height: 0.8;
  color: #fffa;

  & span {
    display: block;
  }

  & em {
    color: var(--bg-contrast-title)
  }
}

.content__hero__date {
  margin-top: 0.5rem;
  font-size: 0.8;
  font-weight: 400;
}

/* Talks
------------------------------------------------------------------------------*/
.talk {
  /* block root */
}

.talk__topic {
  padding: 0.65rem;
  border-bottom: 1px solid var(--bg-contrast-text);
  color: var(--bg-contrast-title);
}

.talk__link {
  --icon-tint: transparent;

  &:enter {
    --icon-tint: currentColor;
  }

  & svg {
    fill: var(--icon-tint);
    margin-right: 0.25rem;
  }
}

.talk__title {
  display: block;
  font-style: italic;
  color: var(--bg-contrast-text);

  @media (--mq-m) {
    display: inline-block;
    margin-left: 0.25rem;
  }
}

.talk__content {
  padding: 1rem;
}

.talk__footer {
  padding: 0 1rem;
  color: #aaa;
}

.speaker {
  @nest .talk__footer & {
    padding: 0.5rem 0;
    border-top: 1px dotted #fff5;
  }
}

.speaker__name {
  transition: color 0.25s;
  
  &:enter {
    color: var(--bg-contrast-title);
  }
}

.speaker__bio {
  margin-top: 0.5rem;
}

/* Sponsors
------------------------------------------------------------------------------*/
.sponsors {
  grid-area: sponsors;
  background: #fffa;

  & p {
    padding: 0.25rem 0.5rem;
    font-size: 0.8rem;
    background: var(--bg-highlight);
    color: #fff8;
  }

  @media (--mq-m) {
    align-self: end;

    position: sticky;
    bottom: 1rem;

    & p {
      flex: 1;
    }
  }
}

.sponsor__list {
  padding: 0.5rem;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;

  @media (--mq-m) {
    justify-content: flex-start;
  }
}

.sponsor {
  height: 40px;
  margin: 0.5rem;

  & img {
    height: inherit;
  }
}

.sponsor--cinema {
  height: 52px;
}

.sponsor--panorama {
  height: 24px;
}

/* Social
------------------------------------------------------------------------------*/
.social {
  display: flex;
}

.social__link {
  transition: 0.25s color;

  display: flex;
  align-items: center;

  margin-left: 0.5rem;
  /* color: #666; */

  &:enter {
    color: #ccc;
  }
}

.social__link__icon {
  --wh: calc(var(--icon-med) + 1rem);

  display: grid;
  place-content: center;

  width: var(--wh);
  height: var(--wh);
  border: 1px solid transparent;
  border-radius: 50%;

  & svg {
    stroke: currentColor;
    
    width: var(--icon-med);
    height: var(--icon-med);
  }

  @nest .social__link:enter & {
    border-color: #999;
  }
}

.social__link__label {
  position: relative;

  margin-left: -4px;
  padding: 0 5px 0 0;
  border: 1px solid transparent;
  border-left: none;
  border-radius: 20px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background: #000;
  z-index: 1;

  @nest .social__link:enter & {
    border-color: #999;
  }
}

/* TODO: refactor! */
.form {
  display: grid;
  align-content: flex-start;
  grid-template-rows: auto 1fr auto;
  gap: 1rem;

  margin-top: 1rem;

  & textarea {
    align-self: stretch;

    padding: 1rem;
    border: none;
    resize: none;
  }

  & button {
    margin: 0;
  }

  &.form--stretch {
    flex: 1;
  }
}

